--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 config.py
-.idea/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -12,6 +11,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 .DS_Store
+.idea
 build/
 develop-eggs/
 dist/
